# llm-inference-engine

./: Cargo.toml  README.md
go/internal/models/: job.go
proto/: db.proto  inference.proto
rust/db/: Cargo.toml  build.rs
rust/db/src/: lib.rs
rust/db/src/lsm/: compaction.rs  lsm.rs  memtable.rs  mod.rs  sstable.rs
rust/db/src/series/: series.rs
rust/db/src/server/: mod.rs
rust/db/src/skiplist/: skiplist.rs
rust/db/src/wal/: wal.rs
rust/db/tests/: lsm_test.rs  series_test.rs
rust/db/wal/: wal.rs
rust/kvcache/src/: block.rs  cache.rs  lib.rs  transfer.rs
rust/transformer/: Cargo.toml  build.rs
rust/transformer/src/: attention.rs  block.rs  config.rs  ffn.rs  lib.rs  rmsnorm.rs
rust/transformer/src/server/: decode_server.rs  mod.rs  prefill_server.rs
rust/transformer/tests/: block_test.rs  rsmnorm_test.rs
