[package]
name = "transformer"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core  = { git = "https://github.com/huggingface/candle" }
candle-nn    = { git = "https://github.com/huggingface/candle" }
anyhow       = "1"
serde_json   = "1"
serde        = { version = "1", features = ["derive"] }
tokenizers   = "0.19"
